--- a/css/style.css
+++ b/css/style.css
@@ -6,41 +6,176 @@
 
 html, body, div {
     font-family: 'Montserrat', sans-serif;
-    background-color: #ebebeb;
     height: 100%;
+}
+
+body {
+    letter-spacing: 1px;
 }
 
 .container {
     height: 100%;
+    background-image: url(../assets/jumbotron.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 
 .navbar {
-    background-color: red;
-    height: 150px;
-}
-
-nav {
-    background-color: red;
+    height: 10vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    width: 100%;
 }
 
 .menu-links {
     display: flex;
     list-style: none;
     float: right;
+    margin-top: 1.5em;
 }
+
 
 .logo {
     float: left;
     padding: 1em;
+    color: white;
 }
 
-.menu-links a {
+.menu-links a, .menu-link a:visited {
     text-decoration: none;
+    padding-right: 1em;
+    color: white; 
+}
+
+.menu-links a:hover {
+    text-shadow: 2px 2px #5d627a;
+    font-weight: 500;
+}
+
+.content {  
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    height: 100vh;
+    color: white;
+    padding-left: 2em;
+    font-size: 150%;
+}
+
+.content h1 {
+    grid-row: 4 / span 1;
+}
+
+.content h2 {
+    font-weight: 100;
+    grid-row: 5 / span 2;
+}
+
+.footer {
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 10vh;
+    color: rgb(238, 237, 237);
+    text-align: center;
+    padding-top: 1em;
+    letter-spacing: 0.5px;
+}
+
+.footer ul {
+    display: flex;
+    list-style: none;
+    font-size: 150%;
+    justify-content: center;
+}
+
+.footer a, .footer a:visited {
+    text-decoration: none;
+    padding-right: 1em;
+    color: rgb(238, 237, 237); 
+}
+
+.footer a:hover {
+    color: blue;
+}
+
+.page-menu {  
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    height: 100vh;
+    color: black;
+    background-color: white;
+    font-size: 150%;
+    grid-gap: 0.7em;
+    margin: 0.7em;
+}
+
+.menu-bieres {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+
+}
+
+.menu-softs {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
+
+}
+
+.menu-alcools {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+}
+
+.menu-snacks {
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+}
+
+.box {
+    text-align: center;
+    padding: 0.5em;
+    background-color: #e1e2e2;
+    justify-content: center;
+}
+
+.grille-menu {
+    margin: auto;
+}
+.grille-menu td {
+
+    text-align: left;  
+    padding: 0.1em;
     padding-right: 1em;
 }
 
-.jumbotron {
-    background-color: red;
-    height: 100%;
+/*
+* GALLERY PAGE
+*/
+
+.page-photo {  
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    height: 50vh;
+    color: black;
+    background-color: white;
+    font-size: 150%;
+    grid-gap: 0.5em;
+}
+
+.gallery {
+    width: 100%;
+}
+
+.first-gallery {
+    background-image: url(../assets/gallery1.jpg);
+    grid-column: 1 / span 1;
+    background-size: cover;
+    background-position: center;
+}
+
+.second-gallery {
+    background-image: url(../assets/gallery2.jpg);
+    grid-column: 2 / span 1;
+    background-size: cover;
+    background-position: center;
 }
