--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .navbar {
-    height: 9vh;
+    height: 9%;
     background-color: rgba(0, 0, 0, 0.3);
     position: fixed;
     width: 100%;
@@ -45,18 +45,19 @@ body {
     display: flex;
     list-style: none;
     float: right;
-    margin-top: 1.5em;
-}
-.logo h1 {
-    font-weight: 200;
-    border: 1px solid white;
-    padding: 2px 10px;
+    margin-top: 1em;
 }
 
 .logo {
     float: left;
-    padding: 1em;
+    padding: 1% 3%;
     color: white;
+}
+
+.logo h1 {
+    font-weight: 200;
+    border: 1px solid white;
+    padding: 0.1em 0.2em;
 }
 
 .menu-links a,
@@ -99,26 +100,44 @@ body {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    height: 90vh;
+    height: 100%;
     color: black;
     font-size: 150%;
-    grid-gap: 1em;
+    grid-gap: 0.6em;
     margin: 1em;
 }
+
+.box {
+    text-align: center;
+    padding: 0.5em;
+    background-color: rgb(248, 248, 248);
+    justify-content: center;
+    border-radius: 0.2em;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
 .box h3 {
     font-weight: 300;
-    margin: 20px;
-    font-size: 1.5em;
+    margin: 0.6em;
+    font-size: 1.1em;
+    border-bottom: 1px solid #ffffff;
 }
 
 .box td {
     font-weight: 100;
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
-table{
+
+td.price {
+    text-align: right;
+    width: 6%;
+}
+
+table {
     width: 100%;
     margin: auto;
 }
+
 .menu-bieres {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
@@ -138,16 +157,6 @@ table{
 .menu-snacks {
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
-}
-
-.box {
-    text-align: center;
-    padding: 0.5em;
-    background-color: rgba(234, 234, 234, 1);
-    justify-content: center;
-    
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .grille-menu {
@@ -225,21 +234,25 @@ table{
 .page-location {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    height: 65vh;
+    height: 75vh;
     color: black;
     background-color: #f7f7f7;
+
 }
 
 .map-img {
     grid-area: 1/2/1/3;
-    padding: 15px;
+    padding: 1em;
     border: 2px solid rgba(0, 0, 0, 0.1);
-    height: 21em;
+    background-color: white;
+    height: 85%;
     
 }
-.map-img iframe{
+
+.map-img iframe {
     height: 100%;
 }
+
 .center {
     margin-left: auto;
     margin-right: auto;
@@ -262,6 +275,11 @@ table{
 textarea {
     height: 10em;
     width: 30em;
+    color: #d0d0d0;
+    padding: 10px;
+    font-family: 'yantramanav';
+    font-size: 0.9em;
+    font-weight: 100;
 }
 
 form {
@@ -281,10 +299,10 @@ fieldset {
 
 .footer {
     background-color: rgba(0, 0, 0, 0.5);
-    height: 10vh;
+    height: 10%;
     color: rgb(238, 237, 237);
     text-align: center;
-    padding-top: 1em;
+    padding-top: 0.8em;
     letter-spacing: 0.5px;
 }
 
@@ -293,6 +311,7 @@ fieldset {
     list-style: none;
     font-size: 150%;
     justify-content: center;
+    
 }
 
 .footer a,
@@ -305,4 +324,3 @@ fieldset {
 .footer a:hover {
     color: #4267b2;
 }
-
