--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,15 @@ table {
     background-color: white;
 }
 
+.contact-img {
+    grid-column: 1 / span 1;
+    background-image: url(../assets/contact-us.png);
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: 75%;
+    
+}
+
 textarea {
     height: 10em;
     width: 30em;
@@ -286,11 +295,21 @@ textarea {
 form {
     grid-area: 1/2/1/3;
     line-height: 150%;
+    grid-column: 2 / span 1;
 }
 
 fieldset {
     width: 100%;
     padding: 1em;
+}
+
+#submit-button {
+    font-size: 0.8em;
+    padding: 0.3em;
+    text-align: center;
+    justify-content: center;
+    margin-left: 45%;
+    margin-top: 1%;
 }
 
 
