--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,13 @@ textarea {
     font-weight: 100;
 }
 
+legend{
+    font-size: 1.3em;
+    border: 2px solid rgba(87, 87, 87, 0.51);
+    padding: 1px 7px;
+    border-radius: 0.5em;
+}
+
 form {
     grid-area: 1/2/1/3;
     line-height: 150%;
@@ -291,6 +298,10 @@ form {
 fieldset {
     width: 100%;
     padding: 1em;
+}
+
+input {
+    margin-left: 2%;
 }
 
 
