--- a/css/style.css
+++ b/css/style.css
@@ -257,9 +257,9 @@ td.price {
 
 .page-location {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 80% 20%;
+    grid-template-columns: 25% 50% 25%;
     height: 75vh;
-    color: black;
     background-color: #f7f7f7;
 }
 
@@ -268,16 +268,19 @@ td.price {
     padding: 1em;
     border: 2px solid rgba(0, 0, 0, 0.1);
     background-color: white;
-    height: 85%; 
+    height: 100%; 
+    width: 90vh;
+    grid-column: 2/span 1;
+    width: 100%
 }
 
 .map-img iframe {
     height: 100%;
+    width: 100%;
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     justify-content: center;
 }
 
@@ -287,8 +290,8 @@ td.price {
 
 .page-contact {
     display: grid;
-    grid-template-rows: 70% 30%;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 80% 20%;
+    grid-template-columns: 25% 50% 25%;
     height: 90vh;
     min-height: 500px;
     color: black;
@@ -301,16 +304,7 @@ td.price {
     background-position: top;
     background-repeat: no-repeat;
     background-size: 75%;
-}
-
-textarea {
-    height: 20%;
-    width: 30em;
-    color: #d0d0d0;
-    padding: 10px;
-    font-family: 'yantramanav';
-    font-size: 0.9em;
-    font-weight: 100;
+    min-width: 100px;
 }
 
 legend {
@@ -323,19 +317,31 @@ legend {
 }
 
 form {
-    grid-area: 1/2/1/3;
+    grid-area: 1/2/1/2;
     line-height: 4vh;
     height: 65vh;
     min-height: 370px;
     grid-column: 2 / span 1;
+    width: 100%;
 }
 
 fieldset {
     padding: 3vh 4vh;
+    height: 100%;
 }
 
 #choice-list {
     margin-bottom: 1vh;
+}
+
+textarea {
+    height: 20%;
+    width: 100%;
+    color: #d0d0d0;
+    padding: 10px;
+    font-family: 'yantramanav';
+    font-size: 0.9em;
+    font-weight: 100;
 }
 
 #newsletter-button {
@@ -343,8 +349,8 @@ fieldset {
 }
 
 #submit-button {
-    text-align: center;
-    margin-left: 35%;
+
+margin-left: 40%;
     transition-duration: 0.3s;
     background-color: #548ac1;
     border: 1px solid #376089;
