--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ textarea {
     .navbar {
         position: static;
         padding-top: 2vh;
-        height: 17vh;
+        height: 19vh;
     }
 
     .content {
@@ -484,9 +484,7 @@ textarea {
     }
 
     .content h2 {
-
         font-size: 1.3em;
-
     }
 
     .page-menu {
@@ -541,6 +539,7 @@ textarea {
     }
 
     .page-contact {
+        padding-top: 5vh;
         display: block;
         height: 90vh;
         min-height: 500px;
@@ -579,6 +578,7 @@ textarea {
     }
 
     .page-contact {
+        padding-top: 4vh;
         display: block;
         height: 90vh;
         min-height: 500px;
