--- a/css/style.css
+++ b/css/style.css
@@ -458,7 +458,7 @@ textarea {
 }
 
 
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media only screen and (min-width : 320px) and (max-width : 500px) {
 
     .page {
         padding-top: 1%;
@@ -474,7 +474,7 @@ textarea {
     .navbar {
         position: static;
         padding-top: 2vh;
-        height: 19vh;
+        height: 20vh;
     }
 
     .content {
@@ -539,6 +539,7 @@ textarea {
     }
 
     .page-contact {
+        margin-top: 2vh;
         padding-top: 5vh;
         display: block;
         height: 90vh;
@@ -548,18 +549,15 @@ textarea {
     }
 
     form {
-
         line-height: 4vh;
         height: 65vh;
         min-height: 300px;
         margin-left: auto;
         width: 90%;
     }
-
-
 }
 
-@media only screen and (min-width : 481px) and (max-width : 860px) {
+@media only screen and (min-width : 501px) and (max-width : 860px) {
     .page-location {
         display: block;
         height: 100vh;
@@ -578,6 +576,7 @@ textarea {
     }
 
     .page-contact {
+        margin-top: 2vh;
         padding-top: 4vh;
         display: block;
         height: 90vh;
@@ -587,13 +586,10 @@ textarea {
     }
 
     form {
-
         line-height: 4vh;
         height: 65vh;
         min-height: 300px;
         margin-left: auto;
         width: 90%;
     }
-
-
 }
