--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,14 @@ textarea {
         width: 90%;
     }
 
+       #choice-list {
+        border: 1px solid #d9d9d9;
+    }
+
+    textarea {
+        border: 1px solid #d9d9d9;
+    }
+    
     #submit-button {
         margin: 0 30%;
     }
